--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html>
-    <head></head>
-    <body>
-        <script>
-            var worker = new Worker('main.js');
-        </script>
-    </body>
+
+<head>
+    <style>
+        canvas {
+            display: block;
+            margin: 5px 0;
+            background: #000;
+        }
+    </style>
+</head>
+
+<body>
+    <canvas></canvas>
+    <script src="main.js">
+
+    </script>
+</body>
+
 </html>
