Generate wasm disassembly

--- a/player_template.html
+++ b/player_template.html
@@ -9,6 +9,7 @@
 
     <canvas></canvas>
     <a href="$rom_disasm_filename">ROM Disassembly</a><br/>
+    <a href="$wasm_disasm_filename">WebAssembly Disassembly</a><br/>
     <script src="main.js">
     </script>
     <script>
