--- a/player_template.html
+++ b/player_template.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <a href="/">Index</a>
+    <a href="./">Index</a>
 
     <canvas></canvas>
     <a href="$rom_disasm_filename">ROM Disassembly</a><br/>
